force-app/main/default/objects/SPEN_Job_Milestone__c/SPEN_Job_Milestone__c.object-meta.xml
<CustomObject>
    <label>Job Milestone</label>
    <nameField>
        <displayFormat>JM-{00000}</displayFormat>
        <label>Job Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>