force-app/main/default/objects/SPEN_Job_Milestone__c/fields/Reason_Late__c.field-meta.xml
<CustomField>
    <fullName>Reason_Late__c</fullName>
    <label>Reason Late</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>