force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Actual_Days_Completed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Actual_Days_Completed__c</fullName>
    <formula>IF( ISPICKVAL(SPEN_Status__c  , &quot;Completed&quot;) ,  (SPEN_Actual_End_Date__c - SPEN_Actual_Start_Date__c ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Days Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>