force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Actual_lead_time_Days__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Actual_lead_time_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will capture actual working lead days elapsed till the job is in progress or closed.</description>
    <label>Actual Lead Time(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>