force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Actual_Start_Date__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>