force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Days_Run_Over__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Days_Run_Over__c</fullName>
    <formula>IF((SPEN_Actual_lead_time_Days__c - SPEN_Planned_lead_time_Days__c)&lt;0 , 0, (SPEN_Actual_lead_time_Days__c - SPEN_Planned_lead_time_Days__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Run Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>