force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Delay_Start_Days__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Delay_Start_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delay Start (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>