force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Is_Late__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Is_Late__c</fullName>
    <formula>IF( AND(TEXT(SPEN_Status__c)  &lt;&gt; &apos;Completed&apos;,ISBLANK(SPEN_Actual_End_Date__c) )  , TODAY()&gt; SPEN_Planned_End_Date__c , SPEN_Actual_End_Date__c &gt;  SPEN_Planned_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late</label>
    <type>Checkbox</type>
</CustomField>