force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Job__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Job__c</fullName>
    <description>Object created to hold Job Records</description>
    <label>Job</label>
    <referenceTo>SPEN_Job__c</referenceTo>
    <relationshipLabel>Job Milestones</relationshipLabel>
    <relationshipName>Job_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>