force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Milestone__c</fullName>
    <label>Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>