force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Milestone_Progress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Milestone_Progress__c</fullName>
    <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;,15, ( (SPEN_Progress_Num__c /100)* 50)) &amp;  IMAGE(&quot;/resource/SPEN_JobMIlestone_BackgroundImage&quot;, &quot;amber&quot;, 15,50-((SPEN_Progress_Num__c/100)*50)) &amp; text( SPEN_Progress__c )</formula>
    <label>Milestone Progress</label>
    <type>Text</type>
</CustomField>