force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Land Interest</fullName>
                <label>Land Right</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Planning Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>