force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_OverdueReminderSend__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OverdueReminderSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overdue Reminder Send</label>
    <type>Checkbox</type>
</CustomField>