force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Parent_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Parent_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Milestone</label>
    <referenceTo>SPEN_WorkCategoryMilestone__c</referenceTo>
    <relationshipLabel>Job Milestones</relationshipLabel>
    <relationshipName>Job_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>