force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_ParentJobMilestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ParentJobMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Job Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.SPEN_Job__c</field>
            <operation>equals</operation>
            <valueField>SPEN_Job_Milestone__c.SPEN_Job__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_Job_Milestone__c</referenceTo>
    <relationshipLabel>Job Milestones</relationshipLabel>
    <relationshipName>Job_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>