force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Planned_Start_Date__c</fullName>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>