force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Planning_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Planning_Milestone__c</fullName>
    <label>Planning Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>