force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Progress_Num__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Progress_Num__c</fullName>
    <formula>IF( LEN(TEXT(SPEN_Progress__c)) = 4, VALUE(LEFT(TEXT(SPEN_Progress__c) , 3)), 

IF( LEN(TEXT(SPEN_Progress__c)) = 2, VALUE(LEFT(TEXT(SPEN_Progress__c) , 1)),
IF( LEN(TEXT(SPEN_Progress__c)) = 3, VALUE(LEFT(TEXT(SPEN_Progress__c) , 2)), null
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>