force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_RAG__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RAG__c</fullName>
    <formula>IF(ISPICKVAL(SPEN_RAG_Status__c  , &quot;Red&quot;) , IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;RED&quot;,25,25),
 IF(ISPICKVAL(SPEN_RAG_Status__c  , &quot;Amber&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;AMBER&quot;,25,25), 
 IF(ISPICKVAL(SPEN_RAG_Status__c  , &quot;Green&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;GREEN&quot;,25,25), &apos;&apos;) )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG</label>
    <type>Text</type>
</CustomField>