force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_RAG_Override__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RAG_Override__c</fullName>
    <label>RAG Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>