force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RAG_Status__c</fullName>
    <label>RAG Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>