force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_RAG_Yellow__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RAG_Yellow__c</fullName>
    <description>Number of days before Planned End Date when the milestone should display Yellow</description>
    <label>RAG Yellow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>