force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_Reason_of_Delay__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Reason_of_Delay__c</fullName>
    <label>Reason of Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Landowner or occupier</fullName>
            </value>
            <value>
                <fullName>Awaiting a PO from the business or project</fullName>
            </value>
            <value>
                <fullName>Awaiting a decision from the business or project</fullName>
            </value>
            <value>
                <fullName>Awaiting design information from the business or project</fullName>
            </value>
            <value>
                <fullName>Statutory Body</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Await Completion of the Legal Agreement</fullName>
            </value>
            <value>
                <fullName>Other Consents</fullName>
            </value>
            <value>
                <fullName>Re-issue of Paperwork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>