force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_ReasonforCreation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReasonforCreation__c</fullName>
    <description>Created as part of ESC-192.</description>
    <label>Reason for Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Predefined</fullName>
            </value>
            <value>
                <fullName>Redesign</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>