force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_ReasonforModification__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReasonforModification__c</fullName>
    <description>Created as part of ESC-192.</description>
    <label>Reason for Modification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redesign</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>