force-app/main/default/objects/SPEN_Job_Milestone__c/fields/SPEN_RedesignLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RedesignLeadTime__c</fullName>
    <formula>IF((TEXT(SPEN_ReasonforCreation__c) = &apos;Redesign&apos;) , SPEN_Actual_lead_time_Days__c, IF((TEXT(SPEN_ReasonforModification__c) = &apos;Redesign&apos;) , SPEN_Days_Run_Over__c, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redesign Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>