force-app/main/default/objects/SPEN_Job_Milestone__c/validationRules/SPEN_JobMilesCompletionMandatoryFields.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_JobMilesCompletionMandatoryFields</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( SPEN_Actual_End_Date__c ) &amp;&amp;  ISPICKVAL( SPEN_Status__c , &quot;Completed&quot;)</errorConditionFormula>
    <errorMessage>Please enter the Actual End Date to complete the Job Milestone</errorMessage>
</ValidationRule>