force-app/main/default/objects/SPEN_Job_Milestone__c/validationRules/SPEN_RedesignValidationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_RedesignValidationCheck</fullName>
    <active>true</active>
    <description>Created as part of ESC-192.</description>
    <errorConditionFormula>OR(
(ISNEW()  &amp;&amp;  TEXT(SPEN_ReasonforCreation__c) = &apos;Redesign&apos; &amp;&amp;  
 TEXT(SPEN_Job__r.SPEN_DesignStatus__c)  &lt;&gt; &apos;Redesign&apos; ),

(NOT(ISNEW()) &amp;&amp;  TEXT( SPEN_ReasonforModification__c ) = &apos;Redesign&apos; &amp;&amp;  
 TEXT(SPEN_Job__r.SPEN_DesignStatus__c)  &lt;&gt; &apos;Redesign&apos; )
)</errorConditionFormula>
    <errorMessage>Job design status should be redesign if you want to update milestone with &apos;Redesign&apos; reason.</errorMessage>
</ValidationRule>