force-app/main/default/objects/SPEN_Job_Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_Job__c</columns>
    <columns>SPEN_Planned_Start_Date__c</columns>
    <columns>SPEN_Planned_lead_time_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>